<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/btnSiguiente2"
        android:layout_width="156dp"
        android:layout_height="50dp"
        android:layout_marginStart="209dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="46dp"
        android:onClick="switchActivity"
        android:text="@string/siguiente"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chbGris" />

    <CheckBox
        android:id="@+id/chbAzul"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="20dp"
        android:onClick="check"
        android:text="@string/azul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chbRojo" />

    <CheckBox
        android:id="@+id/chbGris"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="46dp"
        android:onClick="check"
        android:text="@string/gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chbAmarillo" />

    <CheckBox
        android:id="@+id/chbAmarillo"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="46dp"
        android:text="@string/amarillo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chbNegro" />

    <CheckBox
        android:id="@+id/chbRojo"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="20dp"
        android:text="@string/rojo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chbBlanco" />

    <CheckBox
        android:id="@+id/chbBlanco"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="40dp"
        android:text="@string/blanco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblColores" />

    <CheckBox
        android:id="@+id/chbNegro"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="46dp"
        android:onClick="check"
        android:text="@string/negro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblColores" />

    <TextView
        android:id="@+id/lblColores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="42dp"
        android:text="@string/colores"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>