<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <Button
        android:id="@+id/btnAnterior3"
        android:layout_width="114dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:onClick="exitApp"
        android:text="@string/cerrar"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnInicio"
        android:layout_width="114dp"
        android:layout_height="52dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="19dp"
        android:onClick="switchActivityInicio"
        android:text="@string/inicio"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/btnAnterior3"
        app:layout_constraintStart_toEndOf="@+id/btnAnterior"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnAnterior"
        android:layout_width="114dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:onClick="switchActivityAnterior"
        android:text="@string/anterior"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/greencheck" />

</androidx.constraintlayout.widget.ConstraintLayout>